fixed CSS from display: none to visibility: hidden

--- a/lesson-7/css/large.css
+++ b/lesson-7/css/large.css
@@ -14,20 +14,17 @@
 
     img {
         max-width: 640px;
-        box-shadow: -10px -5px -5px white;
-        position: relative;
-        top: -2px;
-        left: -2px;
     }
 
     img:hover {
         box-shadow: 10px 5px 5px black;
         position: relative;
-        top: -2px;
-        left: -2px;
+        top: -5px;
+        left: -5px;
     }
 
     img:hover+label {
-        display: inline;
+        visibility: visible;
     }
+
 }
