--- a/lesson-8/css/small.css
+++ b/lesson-8/css/small.css
@@ -156,5 +156,5 @@ picture label {
     padding-right: 1em;
     padding-top: .5em;
     top: -2em;
-    display: none;
+    visibility: hidden;
 }
